--- a/index.css
+++ b/index.css
@@ -96,16 +96,20 @@ h1, h2, h3, h4, .h1, .h2, .h3, .h4, .title {
     position: absolute;
     left: 0px;
     top: 0px;
-    z-index: 1;
+    z-index: 10;
     clear: both;
+    max-width: 50%;
+    height: 600px;
 }
 
 .coder {
     position: absolute;
     left: 50%;
     top: 0px;
-    z-index: 1;
+    z-index: 10;
     clear: both;
+    max-width: 50%;
+    height: 600px;
 }
 .tog-img {
     position: absolute;
